<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.ProductActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background_default_color">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/product_cart"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:background="@color/background_default_color"
                    android:contentDescription="@string/cart"
                    android:padding="15dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/shopping_cart" />

                <ImageButton
                    android:id="@+id/product_search"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@id/product_home"
                    android:background="@color/background_default_color"
                    android:contentDescription="@string/search"
                    android:padding="15dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/search" />

                <ImageButton
                    android:id="@+id/product_home"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@id/product_cart"
                    android:background="@color/background_default_color"
                    android:contentDescription="@string/home"
                    android:padding="15dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/home" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/background_default_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/Product_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_introduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/Product_intro" />

            <RatingBar
                android:id="@+id/product_ratingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:numStars="5" />

            <TextView
                android:id="@+id/product_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cost"
                android:textSize="24sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/background_border" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/same_product"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_sameProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/background_border" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/Company"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <ImageButton
                    android:id="@+id/Product_companyImage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/profile" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/product_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Product_company" />

                    <RatingBar
                        android:id="@+id/product_CompanyRatingBar"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:numStars="5" />
                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@drawable/btn_login_bg"
                    android:layout_margin="20dp"
                    android:text="Follow" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/background_border" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/Description"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/Description" />

            <View
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/background_default_color" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:background="@drawable/btn_login_bg"
        android:text="@string/buy" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
