<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_default_color"
    tools:context=".login.PhoneVerifyActivity">
    <LinearLayout
        android:id="@+id/header"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_layout">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/header"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_code_is"
            android:fontFamily="@font/promptbold"
            android:textColor="@color/text_default_color"
            android:textSize="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_centerInParent="true"
        android:padding="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+84 989875947"
                android:textColor="@color/text_default_color"
                android:fontFamily="@font/promptlight"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tvResend"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend"
                android:textColor="#FD4071" />
        </LinearLayout>

        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/edPinEntry"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:maxLength="6"
            android:textIsSelectable="false"
            android:textColor="@color/text_black_color"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvContinue"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/button_continue"
            android:textSize="20dp"
            android:textColor="#fff"
            android:background="@drawable/corner_button_select"
            android:fontFamily="@font/promptbold" />
    </LinearLayout>

</RelativeLayout>